# python-jdubcamp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
.devcontainer/: devcontainer.json
app/: auth.py  database.py  main.py  models.py
tests/: test_app.py
