[project]
name = "jdubcamp"
version = "0.1.0"
description = "JDubCamp FastAPI app"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "authlib==1.2.0",
  "sqlalchemy==2.0.31",
  "psycopg[binary]==3.3.4",
  "psycopg2-binary==2.9.9",
  "python-dotenv==1.0.1",
  "httpx==0.27.0",
  "itsdangerous==2.1.2"
]
